<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.sucen.chagas.NotificacaoFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingTop="?attr/actionBarSize">
        <TextView
            android:id="@+id/tvConecta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/vermelho"
            android:text="@string/tvConecta"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvImporta"
            android:id="@+id/textView11" />
        <RadioGroup
            android:id="@+id/rgImporta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvInseto"
                android:id="@+id/rbInseto" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvCadastro"
                android:id="@+id/rbCadastro" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvNivel"
            android:id="@+id/textView14" />
        <RadioGroup
            android:id="@+id/rgLocal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvMunicipio"
                android:id="@+id/rbMunicipio" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvColegiado"
                android:id="@+id/rbColegiado" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvRegional"
                android:id="@+id/rbRegional" />
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvLocal"
            android:id="@+id/textView15" />

        <AutoCompleteTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/etLocal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvBotao"
            android:drawableRight="@drawable/proc_import"
            android:textSize="@dimen/font_size"
            android:paddingRight="60sp"
            android:id="@+id/btImporta" />
        <TextView
            android:id="@+id/tvResumo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size"
            android:text="@string/tvResumo" />
    </LinearLayout>
</ScrollView>
