<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingTop="?attr/actionBarSize"
    tools:context="com.sucen.chagas.LimpezaFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvLimpa"
        android:id="@+id/textView16" />

    <RadioGroup
        android:id="@+id/rgLimpa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/limpTudo"
            android:id="@+id/rbTodos" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/limpEnvio"
            android:id="@+id/rbEnviados" />
    </RadioGroup>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/limpBotao"
        android:drawableRight="@drawable/erase"
        android:textSize="@dimen/font_size"
        android:paddingRight="60sp"
        android:id="@+id/btLimpa" />

</LinearLayout>
